--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
 version: '3.9'
 
 services:
-  app:
-    container_name: demo-spring-boot
+  spring-boot:
     build: .
     ports:
       - "8080:8080"
     environment:
       APP_AUTHOR: ${APP_AUTHOR}
+  nginx:
+    build: ./nginx
+    depends_on:
+      - spring-boot
+    ports:
+      - "80:80"
