--- a/nginx/moviex.conf
+++ b/nginx/moviex.conf
@@ -2,7 +2,7 @@ server {
         listen 80;
         listen [::]:80;
 
-        server_name example.com;
+        server_name moviex.software;
 
         location / {
             proxy_pass http://localhost:8080/;
