--- a/nginx/moviex.conf
+++ b/nginx/moviex.conf
@@ -1,13 +1,27 @@
-server {
-        listen 80;
-        listen [::]:80;
+user  nginx;
+worker_processes  1;
 
-        server_name moviex.software;
+events {
+    worker_connections  1024;
+}
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
+    server {
+        listen       80;
+        server_name  moviex.software;
 
         location / {
-            proxy_pass http://localhost:8080/;
+            proxy_pass http://spring-boot:8080/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Port $server_port;
         }
+    }
 }
