--- a/nginx/moviex.conf
+++ b/nginx/moviex.conf
@@ -13,7 +13,12 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen       80;
+        listen       443 ssl;
+
+        ssl                  on;
+        ssl_certificate      /etc/nginx/ssl/certificate.crt;
+        ssl_certificate_key  /etc/nginx/ssl/private.key;
+
         server_name  moviex.software;
 
         location / {
