--- a/nginx/moviex.conf
+++ b/nginx/moviex.conf
@@ -13,7 +13,8 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen       443 ssl;
+        listen [::]:443 ssl;
+        listen 443 ssl;
 
         server_name  moviex.software;
 
